Adding the details under the questions

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a new software developer. I am excited to be stating a bootcamp with SMU in order to be proficient at coding.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Dallas, Texas. I went to college in Sherman.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love hanging out with my friends by a pool or at a bar, grilling out and having a couple of drinks. I also like to spend time playing games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be a position where I have a team im in charge of that gets along well together. I would like to work from 9-6 from home.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am currently located in Dallas I moved back after graduating from college in 2018.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To expand my knowledge and have a new more fulfilling career where I get to create solutions.</p>
     </section>
 
     <footer id="footer">
